force-app/main/default/objects/Demo_Cleanup_Event__e/Demo_Cleanup_Event__e.object-meta.xml
<CustomObject>
    <description>Event generated by the batch deletion of records by the Demo Cleanup Lightning component.</description>
    <label>Demo Cleanup Event</label>
    <pluralLabel>Demo Cleanup Events</pluralLabel>
</CustomObject>