force-app/main/default/objects/Demo_Cleanup_Event__e/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the demo cleanup task is finished, false otherwise.</description>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>