force-app/main/default/objects/Demo_Cleanup_Event__e/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The API name of the object whose records are being deleted.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>