force-app/main/default/objects/Demo_Cleanup_Event__e/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>The record ID of the demo cleanup task.</description>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>