force-app/main/default/objects/Demo_Cleanup_Event__e/fields/Total_Errors__c.field-meta.xml
<CustomField>
    <fullName>Total_Errors__c</fullName>
    <description>The total number of errors so far.</description>
    <label>Total Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>